deploy/chengdu.beagle/verdantflare-vedio/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: verdantflare-vedio
  labels:
    app.kubernetes.io/name: verdantflare-vedio
